Fixed time on blog index and spacing of titles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,10 @@ h1 {
 	font-size: 50px;
 }
 
+.title {
+	margin-top: 30px;
+}
+
 .blog-posts {
 	display: flex;
 	flex-direction: column-reverse;
